finally fixed size flickering on about
also added noscript to js dependent pages

--- a/docs/main.css
+++ b/docs/main.css
@@ -740,6 +740,7 @@ h1 {
 .screenshot-vert img, .screenshot-vert video {
   height: 80vh;
   object-fit: contain;
+  max-width: 100%;
 }
 
 
